--- a/survey-analysis.html
+++ b/survey-analysis.html
@@ -97,12 +97,30 @@ As we work on ourselves, let’s also be mindful of the struggles others might b
                 To gain more understanding, we’re conducting a follow-up survey that explores your experiences with the wellness services available on campus. Whether or not you’ve used these services, we’d love to hear from you. If you have any questions, feel free to reach out. Thank you once again for being a crucial part of this initiative!
             </p>
             <div style="text-align: center; margin-top: 20px;">
-                <a href="your_survey_link_here" style="background-color: #3498db; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-size: 16px;">Click Here to Participate in the Follow-Up Survey</a>
+                <a href="#" style="background-color: #3498db; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-size: 16px;">Click Here to Participate in the Follow-Up Survey</a>
             </div>
             <p style="font-size: 12px; text-align:center;">
                 By sharing your thoughts, you’re contributing to a healthier, more supportive campus environment. It should take no more than 2-3 minutes to complete.
             </p>
         </div>
+        
+        <div style="margin-top: 30px; text-align: center;">
+    <h2 style="color: #9C27B0;">📚 Support Resources 📚</h2>
+    <p style="font-size: 16px; text-align:center;">
+                Here are some resources we shared with you earlier. We are excited to let you know that you can now access them from anywhere, anytime.
+            </p>
+    <div style="border: 2px solid #7B1FA2; padding: 5px; border-radius: 10px; background-color: #F3E5F5; color: #616161; font-family: Arial, sans-serif; text-align: center; max-width: 550px; margin:20px auto;">
+        <h3 style="color: #E91E63;"> Understanding Your Results Better</h3>
+        <p>Learn more about the different sections in your survey results: Depression, Anxiety, Grit and Mindset</p>
+        <a href="https://studentwellnessiitb.github.io/understanding-your-results-better.html" style="color: #1976D2;">Read More</a>
+    </div>
+
+    <div style="border: 2px solid #7B1FA2; padding: 5px; border-radius: 10px; background-color: #F3E5F5; color:#616161; font-family: Arial, sans-serif; text-align: center; max-width: 550px; margin: 20px auto;">
+        <h3 style="color: #E91E63;"> Student Wellness Centre Activities</h3>
+        <p>Explore the various activities organized by the Student Wellness Center to promote mental well-being. From workshops to counseling, there's something for everyone.</p>
+        <a href="https://studentwellnessiitb.github.io/swc-activities.html" style="color: #1976D2;">Read More</a>
+    </div>
+</div>
 
         <p style="font-size: 14px; text-align: center; color: #666; margin-top: 30px;">
             With appreciation,<br> The Mental Health Survey Team
@@ -110,4 +128,3 @@ As we work on ourselves, let’s also be mindful of the struggles others might b
     </div>
 </body>
 </html>
-
