--- a/survey-analysis.html
+++ b/survey-analysis.html
@@ -33,27 +33,30 @@
 </p>
 
 
-        <div style="text-align: center; margin-bottom: 20px;">
-            <h2 style="color: #0056b3;">Frequency Distribution of Key Metrics</h2>
-            <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
-                <div style="width: 48%; margin-bottom: 20px;">
-                    <img src="anxiety.png" alt="Bar chart of anxiety" style="max-width: 100%; height: auto;">
-                    <p style="font-size: 14px; color: #7f8c8d;">Anxiety Levels</p>
-                </div>
-                <div style="width: 48%; margin-bottom: 20px;">
-                    <img src="depression.png" alt="Bar chart of depression" style="max-width: 100%; height: auto;">
-                    <p style="font-size: 14px; color: #7f8c8d;">Depression Levels</p>
-                </div>
-                <div style="width: 48%; margin-bottom: 20px;">
-                    <img src="grit.png" alt="Bar chart of grit" style="max-width: 100%; height: auto;">
-                    <p style="font-size: 14px; color: #7f8c8d;">Grit Scores</p>
-                </div>
-                <div style="width: 48%; margin-bottom: 20px;">
-                    <img src="mindset.png" alt="Bar chart of mindset" style="max-width: 100%; height: auto;">
-                    <p style="font-size: 14px; color: #7f8c8d;">Mindset Types</p>
-                </div>
-            </div>
-        </div>
+       <div style="text-align: center; margin-bottom: 20px;">
+    <h2 style="color: #0056b3;">Frequency Distribution of Key Metrics</h2>
+    <table style="width: 100%; table-layout: fixed;">
+        <tr>
+            <td style="width: 25%; padding: 10px;">
+                <img src="https://studentwellnessiitb.github.io/anxiety.png" alt="Bar chart of anxiety" style="max-width: 100%; height: auto;">
+                <p style="font-size: 14px; color: #7f8c8d;">Anxiety Levels</p>
+            </td>
+            <td style="width: 25%; padding: 10px;">
+                <img src="https://studentwellnessiitb.github.io/depression.png" alt="Bar chart of depression" style="max-width: 100%; height: auto;">
+                <p style="font-size: 14px; color: #7f8c8d;">Depression Levels</p>
+            </td>
+            <td style="width: 25%; padding: 10px;">
+                <img src="https://studentwellnessiitb.github.io/grit.png" alt="Bar chart of grit" style="max-width: 100%; height: auto;">
+                <p style="font-size: 14px; color: #7f8c8d;">Grit Scores</p>
+            </td>
+            <td style="width: 25%; padding: 10px;">
+                <img src="https://studentwellnessiitb.github.io/mindset.png" alt="Bar chart of mindset" style="max-width: 100%; height: auto;">
+                <p style="font-size: 14px; color: #7f8c8d;">Mindset Types</p>
+            </td>
+        </tr>
+    </table>
+</div>
+
 
         <div style="padding: 15px; border-radius: 8px; margin-bottom: 20px; background-color: #e8f5e9; border-left: 5px solid #81c784;">
             <h2 style="color: #0056b3;">Correlations Between Key Factors</h2>
@@ -65,22 +68,24 @@
         </div>
 
         <div style="text-align: center; margin-bottom: 20px;">
-            <h2 style="color: #0056b3;">Significant Correlation Plots</h2>
-            <div style="display: flex; justify-content: space-between; flex-wrap: wrap;">
-                <div style="width: 32%; margin-bottom: 20px;">
-                    <img src="depression-anxiety.png" alt="Scatter plot of anxiety and depression" style="max-width: 100%; height: auto;">
-                    <p style="font-size: 14px; color: #7f8c8d;">Anxiety vs. Depression</p>
-                </div>
-                <div style="width: 32%; margin-bottom: 20px;">
-                    <img src="depression-grit.png" alt="Scatter plot of depression and grit" style="max-width: 100%; height: auto;">
-                    <p style="font-size: 14px; color: #7f8c8d;">Depression vs. Grit</p>
-                </div>
-                <div style="width: 32%; margin-bottom: 20px;">
-                    <img src="anxiety-grit.png" alt="Scatter plot of anxiety and grit" style="max-width: 100%; height: auto;">
-                    <p style="font-size: 14px; color: #7f8c8d;">Anxiety vs. Grit</p>
-                </div>
-            </div>
-        </div>
+    <h2 style="color: #0056b3;">Significant Correlation Plots</h2>
+    <table style="width: 100%; table-layout: fixed;">
+        <tr>
+            <td style="width: 33.33%; padding: 10px;">
+                <img src="https://studentwellnessiitb.github.io/depression-anxiety.png" alt="Scatter plot of anxiety and depression" style="max-width: 100%; height: auto;">
+                <p style="font-size: 14px; color: #7f8c8d;">Anxiety vs. Depression</p>
+            </td>
+            <td style="width: 33.33%; padding: 10px;">
+                <img src="https://studentwellnessiitb.github.io/depression-grit.png" alt="Scatter plot of depression and grit" style="max-width: 100%; height: auto;">
+                <p style="font-size: 14px; color: #7f8c8d;">Depression vs. Grit</p>
+            </td>
+            <td style="width: 33.33%; padding: 10px;">
+                <img src="https://studentwellnessiitb.github.io/anxiety-grit.png" alt="Scatter plot of anxiety and grit" style="max-width: 100%; height: auto;">
+                <p style="font-size: 14px; color: #7f8c8d;">Anxiety vs. Grit</p>
+            </td>
+        </tr>
+    </table>
+</div>
 
         <div style="padding: 15px; border-radius: 8px; margin-bottom: 20px; background-color: #fff3e0; border-left: 5px solid #ffb74d;">
             <h2 style="color: #0056b3;">Take Care of Yourself</h2>
