--- a/survey-analysis.html
+++ b/survey-analysis.html
@@ -87,7 +87,14 @@
     </table>
 </div>
 
-        
+        <div style="padding: 15px; border-radius: 8px; margin-bottom: 20px; background-color: #fff3e0; border-left: 5px solid #ffb74d;">
+            <h2 style="color: #0056b3;">Take Care of Yourself</h2>
+            <p style="font-size: 16px;">
+               The survey results show that many of us are dealing with high levels of anxiety and depression. It’s a reminder that we’re all facing challenges, and taking care of your mental health is essential. Have you ever felt this way but weren’t sure whether to reach out for support? You're not alone in this feeling, and it’s completely okay to ask for help.<br><br>
+Whether your scores reflected anxiety, low grit, or any other concern, remember—this is a starting point, not a destination. There are always ways to improve, and reaching out for support is a sign of strength, not weakness.<br><br>
+As we work on ourselves, let’s also be mindful of the struggles others might be going through. A little kindness—whether to yourself or someone else—can make a big difference. We’re all in this together, and small acts of care can go a long way!
+            </p>
+        </div>
         
         <div style="margin-top: 30px; text-align: center;">
     <h2 style="color: #9C27B0;">📚 Support Resources 📚</h2>
